--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 backoff==2.2.1
-Flask==2.2.3
-openai==0.27.2
-python-dotenv==1.0.0
+openai==0.27.8
+environs~=9.5.0
+schedule==1.2.0
+PyYAML~=6.0
 
-waitress~=2.1.2
-schedule~=1.1.0
+gino~=1.0.1
+SQLAlchemy~=1.3.24
+
+uvicorn~=0.22.0
+fastapi==0.97.0
